* Tue May 31 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.22
- Show session open time in "show session"/"show user" detailed output.
- Have slaves with BGP configured drop BGP on receipt of a shutdown
  signal, but hang about for an additional 5s to process any remaining
  traffic.
- Run regular_cleanups after processing the results of the select,
  looking at a sufficient slice of each table to ensure that all
  entries are examined at least once per second.

* Mon May 23 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.21
- Cluster changes from Michael, intended to prevent a stray master
  from trashing a cluster:
  + Ignore heartbeats from peers claiming to be the master before the
    timeout on the old master has expired.
  + A master receiving a stray heartbeat sends a unicast HB back, which
    should cause the rogue to die due to the tie-breaker code.
  + Keep probing the master for late heartbeats.
  + Drop BGP as soon as we become master with the minumum required peers.
  + Any PING seen from a master forces an election (rather than just
    where basetime is zero).
  + A slave which receives a LASTSEEN message (presumably a restarted
    master) sends back new message type, C_MASTER which indicates the
    address of the current master.
- New config option: cluster_master_min_adv which determines the minimum
  number of up to date slaves required before the master will drop
  routes.

* Mon May 16 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.20
- Add handling of "throttle=N" RADIUS attributes.
- Fix RADIUS indexing (should have 16K entries with 64 sockets).

* Sat May 7 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.19
- Fix leak in session freelist when initial RADIUS session allocation
  fails.

* Tue May 3 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.18
- Add a Cisco-Avpair with intercept details to RADIUS Start/Stop
  records.

* Mon May 2 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.17