@@ -282,6 +282,10 @@ second.  Even if this is disabled, you can see this information by running
 the <EM>uptime</EM> command on the CLI.
 </LI>
 
+<LI><B>cleanup_interval</B> (int)<BR>
+Interval between regular cleanups (in seconds).
+</LI>
+
 <LI><B>multi_read_count</B> (int)<BR>
 Number of packets to read off each of the UDP and TUN fds when
 returned as readable by select (default:  10).  Avoids incurring the
