@@ -2,7 +2,7 @@
 .de Id
 .ds Dt \\$4 \\$5
 ..
-.Id $Id: startup-config.5,v 1.3.2.4 2005-05-30 06:35:19 bodea Exp $
+.Id $Id: startup-config.5,v 1.3.2.5 2005-07-03 02:40:23 bodea Exp $
 .TH STARTUP-CONFIG 5 "\*(Dt" L2TPNS "File Formats and Conventions"
 .SH NAME
 startup\-config \- configuration file for l2tpns
@@ -130,6 +130,9 @@ by running the
 .B
 uptime
 command on the CLI.
+.TP
+.B cleanup_interval
+Interval between regular cleanups (in seconds).
 .TP
 .B multi_read_count
 Number of packets to read off each of the UDP and TUN fds when
