@@ -1,5 +1,5 @@
 // L2TPNS Global Stuff
-// $Id: l2tpns.h,v 1.49.2.15 2005-05-30 06:35:19 bodea Exp $
+// $Id: l2tpns.h,v 1.49.2.16 2005-07-03 02:40:22 bodea Exp $
 
 #ifndef __L2TPNS_H__
 #define __L2TPNS_H__
@@ -15,7 +15,7 @@
 #include <sys/types.h>
 #include <libcli.h>
 
-#define VERSION	"2.0.22"
+#define VERSION	"2.0.23"
 
 // Limits
 #define MAXTUNNEL	500		// could be up to 65535
@@ -420,6 +420,7 @@ typedef struct
 
 	char		config_file[128];
 	int		reload_config;			// flag to re-read config (set by cli)
+	int		cleanup_interval;		// interval between regular cleanups (in seconds)
 	int		multi_read_count;		// amount of packets to read per fd in processing loop
 
 	char		tundevice[10];			// tun device name
